# clidantic

./: .gitignore  404.html  LICENSE  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml  test.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  test.yml
clidantic/: __init__.py  base.py  click.py  convert.py  core.py  fields.py  testing.py  types.py
docs/: index.md
docs/guide/: advanced.md  complex.md  fields.md  intro.md  nesting.md  primitives.md  types.md
examples/simple/: simple_cmd.py  simple_default.py  simple_desc.py  simple_empty.py  simple_help.py  simple_names.py  simple_uninit.py
examples/subgroups/: nested_simple.py
examples/typing/: choice_types.py  container_types.py  module_types.py  primitive_types.py
guide/advanced/: index.html
guide/fields/: index.html
guide/intro/: index.html
guide/nesting/: index.html
guide/types/: index.html
search/: search_index.json
tests/: conftest.py  module.py  test_base.py  test_features.py  test_types.py
tests/test_examples/: test_simple.py  test_typing.py
tools/: docs.sh  lint.sh  publish.sh  test.sh
