[tool.poetry]
name = "clidantic"
version = "0.1.0"
description = "Elegant CLI applications using Click and Pydantic"
authors = ["Edoardo Arnaudo <edoardo.arn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.10b0"
mypy = "^0.910"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
known_third_party = ["click", "pydantic"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
