[tool.poetry]
name = "clidantic"
version = "0.0.2"
description = "Elegant CLI applications using Click and Pydantic"
authors = ["Edoardo Arnaudo <edoardo.arn@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/edornd/clidantic"
repository = "https://github.com/edornd/clidantic"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Software Development",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.10b0"
mypy = "^0.910"
pytest = "^6.2.5"
coverage = "^6.1.2"
pytest-cov = "^3.0.0"

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
known_third_party = ["click", "pydantic"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
